--- a/README.adoc
+++ b/README.adoc
@@ -8,7 +8,7 @@ Clone this repo and initialize submodules
 ```
 git clone https://github.com/yogendra/SCS.git 
 cd SCS
-git submodule init
+git submodule update --init --recursive
 
 ```
 
